--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,6 +13,9 @@ jobs:
             - name: Checkout branch
               uses: actions/checkout@v4
 
+            - name: Change permissions
+              run: sudo chmod -R 777 ./
+
             - name: Copy .env file to server
               run: |
                   cat << 'EOF' > .env
